fix test setup