@@ -16,10 +16,10 @@
  */
 package org.ops4j.pax.exam.testng.servlet;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
-import org.junit.Test;
+import org.testng.annotations.Test;
 import org.testng.TestListenerAdapter;
 import org.testng.TestNG;
 import org.testng.xml.XmlClass;
@@ -35,7 +35,7 @@ public class TestNGRunnerTest
     public void runSingleMethod()
     {
         TestNG testNG = new TestNG();
-        testNG.setListenerClasses(Collections.<Class>emptyList());
+        testNG.setListenerClasses(Collections.emptyList());
         TestListenerAdapter listener = new TestListenerAdapter();
         testNG.addListener( listener );
         XmlSuite suite = new XmlSuite();
@@ -49,7 +49,7 @@ public class TestNGRunnerTest
         xmlClass.getIncludedMethods().add(xmlInclude);
         
 
-        testNG.setXmlSuites( Arrays.asList( suite ) );
+        testNG.setXmlSuites(List.of(suite));
         testNG.setUseDefaultListeners( false );
         testNG.run();
         
